--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "test":"vite --mode test",
-    "a":"vite --mode a",
+    "test": "vite --mode test",
+    "a": "vite --mode a",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "element-plus": "^2.7.2",
     "mockjs": "^1.1.0",
