--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.7.2",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
