--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
+    "echarts": "^5.5.0",
     "element-plus": "^2.7.2",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
